Formatki dla odpowiedzi

--- a/LanguageSchool/Views/UserOpenAnswer/Index.cshtml
+++ b/LanguageSchool/Views/UserOpenAnswer/Index.cshtml
@@ -6,6 +6,7 @@
 }
 
 <div class="container-fluid">
+    @{ Html.RenderPartial("_PartHeader", "Odpowiedzi na pytania otwarte"); }
     <div class="row bordered">
         <table class="col-md-12 table table-striped table-bordered">
             <tr>
