Poprawka tworzenia pytań oraz wyświetlania ich na testach

--- a/LanguageSchool/Views/Test/Take.cshtml
+++ b/LanguageSchool/Views/Test/Take.cshtml
@@ -9,7 +9,7 @@
 
 @using (Html.BeginForm())
 {
-    int anotherHalf = (Model.ClosedQuestions.Count / 2) + 1;
+    int amountOfQuestions = Model.ClosedQuestions.Count;
 
     <div class="container">
         @Html.HiddenFor(model => model.Id)
@@ -20,26 +20,44 @@
             Html.RenderPartial("_PartHeader", "Pytania zamknięte");
             <div class="row">
                 <div class="bordered col-md-12">
-                    <div class="form-group col-md-6" style="border-right: 1px solid lightgray;">
-                        <ol>
-                            @for (int i = 0; i <= (Model.ClosedQuestions.Count / 2); i++)
-                            {
-                                ViewBag.i = i;
+                    @if (amountOfQuestions > 10)
+                    {
+                        int anotherHalf = (Model.ClosedQuestions.Count / 2) + 1;
 
-                                @Html.Partial("_PrepareAnswers");
-                            }
-                        </ol>
-                    </div>
-                    <div class="form-group col-md-6">
-                        <ol start=@anotherHalf>
-                            @for (int i = anotherHalf; i < Model.ClosedQuestions.Count; i++)
-                            {
-                                ViewBag.i = i;
+                        <div class="form-group col-md-6" style="border-right: 1px solid lightgray;">
+                            <ol>
+                                @for (int i = 0; i <= (amountOfQuestions / 2); i++)
+                                {
+                                    ViewBag.i = i;
 
-                                @Html.Partial("_PrepareAnswers");
-                            }
-                        </ol>
-                    </div>
+                                    @Html.Partial("_PrepareAnswers");
+                                }
+                            </ol>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <ol start=@anotherHalf>
+                                @for (int i = anotherHalf; i < amountOfQuestions; i++)
+                                {
+                                    ViewBag.i = i;
+
+                                    @Html.Partial("_PrepareAnswers");
+                                }
+                            </ol>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group col-md-12">
+                            <ol>
+                                @for (int i = 0; i < Model.ClosedQuestions.Count; i++)
+                                {
+                                    ViewBag.i = i;
+
+                                    @Html.Partial("_PrepareAnswers");
+                                }
+                            </ol>
+                        </div>
+                    }
                 </div>
             </div>
         }
