--- a/LanguageSchool/Views/Test/Create.cshtml
+++ b/LanguageSchool/Views/Test/Create.cshtml
@@ -74,7 +74,7 @@
         @{ Html.RenderPartial("_PartHeader", "Wybierz tematy dla testu"); }
         <div class="row">
             <div class="bordered col-md-12">
-                <table class="table table-striped table-bordered">
+                <table class="table table-bordered">
                     <tr>
                         <th>
                             Nazwa
