--- a/LanguageSchool/Views/LessonSubject/CreateFromExisting.cshtml
+++ b/LanguageSchool/Views/LessonSubject/CreateFromExisting.cshtml
@@ -1,64 +1,48 @@
-﻿@model IEnumerable<LanguageSchool.Models.LessonSubject>
+﻿@model LanguageSchool.Models.ViewModels.ExistingLessonSubjectsVM
 
 @{
     ViewBag.Title = "CreateFromExisting";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>CreateFromExisting</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Data utworzenia
-        </th>
-        <th>
-            Nazwa grupy
-        </th>
-        <th>
-            Nazwa
-        </th>
-        <th>
-            Opis
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDeleted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreationDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeletionDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsActive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Group.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
-</table>
+<div class="container">
+        @foreach (var group in Model.CourseGroups.Where(g => g.LessonSubjects.Any()))
+        {
+            @Html.Partial("_PartHeader", group.Name)
+            <div class="row">
+                <div class="bordered col-md-12">
+                    <table class="table table-striped table-bordered">
+                        <tr>
+                            <th>
+                                Data utworzenia
+                            </th>
+                            <th>
+                                Nazwa
+                            </th>
+                            <th>
+                                Opis
+                            </th>
+                            <th></th>
+                        </tr>
+                        @foreach (var lessonSubject in group.LessonSubjects.Where(ls => !ls.IsDeleted))
+                        {
+                            <tr>
+                                <td>
+                                    @lessonSubject.CreationDate
+                                </td>
+                                <td>
+                                    @lessonSubject.Name
+                                </td>
+                                <td>
+                                    @lessonSubject.Description
+                                </td>
+                                <td>
+                                    @Html.ActionLink("Wybierz", "Copy", new { lessonSubjectId = lessonSubject.Id, groupId = Model.TeacherGroupId })
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                </div>
+            </div>
+        }
+</div>
